# TiagoPinocchioExample_forGSoC2025

./: CMakeLists.txt  README.md  package.xml
src/: pinocchio_tiago.cpp
